# summer_project

./: Log.md  README.md
bag_record/: CMakeLists.txt  package.xml
bag_record/src/: sensor_recorder.cpp
ofb_ctr/: CMakeLists.txt  package.xml
ofb_ctr/include/ofb_ctr/: OffboardCtr.h
ofb_ctr/src/: OffboardCtr.cpp  detect_client_test.cpp  gz_ros_bridge.cpp  my_test.cpp
ofb_ctr/srv/: TargetDetection.srv
orbslam3/: CMakeLists.txt  package.xml
orbslam3/example/: camera_test.cc  camera_test.yaml  mono_realsense_D435i.cc  ros_test.cc  ros_test.yaml
orbslam3/include/: System.h
orbslam3/src/: LoopClosing.cc
yolo_detector/: package.xml  setup.py
yolo_detector/yolo_detector/: apple_detect.py  camera_test.py  detect.py  detect_client.py  detect_server.py  move1.py  my_detect1.py  service_test.py
yolo_detector/yolo_detector/utils/: dataloaders.py  torch_utils.py
